--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </nav>
 
   <!-- ===== HERO ===== -->
-  <header id="home" class="hero">
+  <header id="home" class="hero reveal">
     <div class="container hero-grid">
       <div>
         <p class="kicker">Hello, I'm</p>
@@ -95,7 +95,7 @@
   </header>
 
   <!-- ===== GALLERY ===== -->
-  <section id="gallery" class="gallery">
+  <section id="gallery" class="gallery reveal">
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Gallery</h2>
@@ -117,17 +117,17 @@
   </section>
 
   <!-- ===== EXPERIENCE ===== -->
-  <section id="experience">
+  <section id="experience" class="reveal">
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Experience</h2>
         <p class="section-desc">Snapshot of roles and contributions.</p>
       </div>
 
-      <div class="card timeline">
+  <div class="card timeline reveal">
         <!-- Collapsible wrapper: we show a collapsed preview and allow expansion -->
         <div class="timeline-body" id="timelineBody">
-        <div class="t-item">
+  <div class="t-item">
           <h3 style="margin-bottom:1%;">IT Infrastructure Intern</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">Texchem Corporation Sdn Bhd</span><p><span class="muted" style="text-align:right;">Apr 2025 — Oct 2025</span></p>
@@ -140,7 +140,7 @@
           </ul>
         </div>
 
-        <div class="t-item">
+  <div class="t-item">
           <h3 style="margin-bottom:1%;">Program Akar Cohort 2</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">Paynet, Peoplelogy, Futuresparx</span><p><span class="muted" style="text-align:right;">Jun 2025 — Aug 2025</span></p>
@@ -152,7 +152,7 @@
           </ul>
         </div>
 
-        <div class="t-item">
+  <div class="t-item">
           <h3 style="margin-bottom:1%;">Kaspersky{CTF}</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">Kaspersky</span><p><span class="muted" style="text-align:right;">Aug 2025</span></p>
@@ -164,7 +164,7 @@
           </ul>
         </div>
 
-        <div class="t-item">
+  <div class="t-item">
           <h3 style="margin-bottom:1%;">Asean AI Malaysia Summit 2025 Buildathon</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">AI Tinkerers Kuala Lumpur, National AI Office (NAIO)</span><p><span class="muted" style="text-align:right;">Aug 2025</span></p>
@@ -175,7 +175,7 @@
           </ul>
         </div>
 
-        <div class="t-item">
+  <div class="t-item">
           <h3 style="margin-bottom:1%;">Great AI Hackathon</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">AWS, Asia Pacific University</span><p><span class="muted" style="text-align:right;">Sep 2025</span></p>
@@ -185,7 +185,7 @@
           </ul>
         </div>
 
-        <div class="t-item">
+  <div class="t-item">
           <h3 style="margin-bottom:1%;">Talentbank Broadroom Challenge</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">Talentbank</span><p><span class="muted" style="text-align:right;">Sep 2025</span></p>
@@ -195,7 +195,7 @@
           </ul>
         </div>
 
-        <div class="t-item">
+  <div class="t-item">
           <h3 style="margin-bottom:1%;">07CTF</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">0bscuri7y</span><p><span class="muted" style="text-align:right;">Sep 2025</span></p>
@@ -214,14 +214,14 @@
   </section>
   
   <!-- ===== PROJECTS ===== -->
-  <section id="projects">
+  <section id="projects" class="reveal">
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Projects</h2>
         <p class="section-desc">These are a few notable projects that I have done throughout my IT career.</p>
       </div>
       <div class="grid grid-3">
-        <article class="card">
+  <article class="card reveal">
           <h3>CompMed AR</h3>
           <p class="muted">An AR‑assisted learning app for visualizing <strong>REAL</strong> human anatomy models in 3D, built for medical students.</p>
           <div class="tags">
@@ -235,7 +235,7 @@
           </div>
         </article>
 
-        <article class="card">
+  <article class="card reveal">
           <h3>osTicket on AWS</h3>
           <p class="muted">A live demo of an open source ticketing system hosted in AWS using my own domain.</p>
           <div class="tags">
@@ -250,7 +250,7 @@
           </div>
         </article>
 
-        <article class="card">
+  <article class="card reveal">
           <h3>CARe - The Fastest Hospital</h3>
           <p class="muted">A proof-of-concept mobile app to find the fastest hospital.</p>
           <div class="tags">
@@ -269,7 +269,7 @@
   </section>
 
   <!-- ===== Certifications ===== -->
-  <section id="certifications">
+  <section id="certifications" class="reveal">
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Certifications</h2>
@@ -326,13 +326,13 @@
   </section>
 
   <!-- ===== SKILLS ===== -->
-  <section id="skills">
+  <section id="skills" class="reveal">
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Skills</h2>
         <p class="section-desc">A selection of tools and technologies I use.</p>
       </div>
-      <div class="card">
+  <div class="card reveal">
         <div class="skills">
           <span class="skill">HTML5</span>
           <span class="skill">CSS3</span>
@@ -350,13 +350,13 @@
   </section>
 
   <!-- ===== CONTACT ===== -->
-  <section id="contact">
+  <section id="contact" class="reveal">
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Contact</h2>
         <p class="section-desc">Have an opportunity or idea? Let's talk.</p>
       </div>
-      <div class="card">
+  <div class="card reveal">
         <p>Email me at <a class="link" href="mailto:terry@example.com">terryong30@gmail.com</a> or find me here:</p>
         <div class="spacer"></div>
         <div style="display:flex; gap:.6rem; flex-wrap:wrap">
