--- a/index.html
+++ b/index.html
@@ -245,8 +245,7 @@
           </div>
           <div class="spacer"></div>
           <div style="display:flex; gap:.6rem; flex-wrap:wrap">
-            <a class="btn btn-ghost" target="_blank" href="https://helpdesk.terryongkokdonq.xyz/">Live</a>
-            <a class="btn btn-ghost" target="_blank" href="#">Code</a>
+            <a class="btn btn-ghost" target="_blank" href="https://portfolio.terryongkokdonq.xyz/">Live</a>
           </div>
         </article>
 
