--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   </script>
 </head>
 <body>
+  <div style="position:absolute;" id="upmost"></div>
   <!-- SPLASH / FAKE LOADING (only on first visit) -->
   <div id="splashOverlay" class="splash-overlay" aria-hidden="true">
     <div class="splash-inner" role="img" aria-label="Loading">
@@ -49,7 +50,7 @@
   <!-- ===== NAV ===== -->
   <nav class="nav" aria-label="Primary">
     <div class="container nav-inner">
-      <a class="brand" href="#home">
+      <a class="brand" href="#upmost">
         <span aria-hidden="true"><img sizes="32x32" src="images/favicon-32x32.png"></img></span>
         <span> Terry Ong </span>
       </a>
@@ -76,7 +77,8 @@
       <div>
         <p class="kicker">Hello, I'm</p>
         <h1 class="headline"> <span class="grad">Terry Ong</span> — ITOps Generalist</h1>
-        <p class="sub">A computer science graduate with experience in IT infrastructure and a background in dev, cybersecurity, cloud and AI.<br><br>This website is built using vanilla HTML, CSS and JS (with AI assistance); hosted using Github, Azure and Namecheap. Showcasing my knowledge on Gen AI, cloud, version control and DNS.<br><br>Outside of tech, I’m a person who enjoys competition, a performing musician and gamer.</p>
+        <p class="sub">A computer science graduate with experience in IT infrastructure and a background in dev, cybersecurity, cloud and AI.</p>
+        <p class="sub"> Outside of tech, I’m a person who enjoys competition, a performing musician and gamer.</p>
         <div class="cta-row">
           <a class="btn" href="documents/Ong_Kok_Donq_Resume.pdf" download>Download Resume</a>
         </div>
