--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
   <footer>
     <div class="container">
-      <p>© <span id="year"></span> <strong>Terry Ong</strong>. Built with semantic HTML, modern CSS, and a tiny bit of JS.</p>
+      <p>© <span id="year"></span> <strong>Terry Ong</strong>. Hosted on Azure and CI/CD with GitHub.</p>
     </div>
   </footer>
 
