--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <p class="section-desc">Have an opportunity or idea? Let's talk.</p>
       </div>
   <div class="card reveal">
-        <p>Email me at <a class="link" href="mailto:terry@example.com">terryong30@gmail.com</a> or find me here:</p>
+        <p>Email me at <a class="link" href='mai&#108;t&#111;&#58;terr%79%6F%6Eg30&#64;&#103;m%6&#49;%69l&#46;%63%6&#70;%6D'>&#116;erryong3&#48;&#64;&#103;m&#97;il&#46;com</a> or find me here:</p>
         <div class="spacer"></div>
         <div style="display:flex; gap:.6rem; flex-wrap:wrap">
           <a class="btn btn-ghost" href="https://github.com/terryong31" aria-label="Open GitHub profile" target="_blank" rel="noopener noreferrer">
