--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
 
   <div class="t-item">
-          <h3 style="margin-bottom:1%;">Asean AI Malaysia Summit 2025 Buildathon</h3> 
+          <h3 style="margin-bottom:1%;">ASEAN AI Malaysia Summit 2025 Buildathon</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">AI Tinkerers Kuala Lumpur, National AI Office (NAIO)</span><p><span class="muted" style="text-align:right;">Aug 2025</span></p>
           </div>
