--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
   <article class="card reveal">
           <h3>CompMed AR</h3>
           <p class="muted">An AR‑assisted learning app for visualizing <strong>REAL</strong> human anatomy models in 3D, built for medical students.</p>
+          <img src="gallery/1.jpg"></img>
           <div class="tags">
             <span class="tag">AR</span>
             <span class="tag">3D</span>
@@ -233,6 +234,7 @@
           </div>
           <div class="spacer"></div>
           <div style="display:flex; gap:.6rem; flex-wrap:wrap">
+            <a class="btn btn-ghost" target="_blank" href="app/CompMed AR.apk" aria-label="Open source code">Download App</a>
             <a class="btn btn-ghost" target="_blank" href="https://github.com/terryong31/compmed-ar" aria-label="Open source code">Code</a>
           </div>
         </article>
