--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="stat-label">Projects</div>
           </div>
           <div class="stat-item">
-            <div class="stat-number">5+</div>
+            <div class="stat-number">3+</div>
             <div class="stat-label">Certifications</div>
           </div>
           <div class="stat-item">
@@ -164,19 +164,56 @@
     <div class="container">
       <div class="section-head">
         <h2 class="section-title">Gallery</h2>
-        <p class="section-desc">A few images of me.</p>
+        <p class="section-desc">Some images of me and myself.</p>
       </div>
       <div class="gallery-wrap card">
         <button class="g-btn g-prev" aria-label="Previous image">‹</button>
         <div class="g-frame" aria-live="polite">
-          <!-- Add your images to /gallery and name them 1.jpg, 2.jpg, ... -->
-          <img class="g-item" src="gallery/1.jpg" alt="Gallery image 1" />
-          <img class="g-item" src="gallery/2.jpg" alt="Gallery image 2" />
-          <img class="g-item" src="gallery/3.jpg" alt="Gallery image 3" />
-          <img class="g-item" src="gallery/4.jpg" alt="Gallery image 3" />
+          <div class="g-item active">
+            <img src="gallery/1.jpg" alt="Gallery image 1" />
+            <div class="g-description">
+              <h4>AAIMS25 Buildathon Group Photo</h4>
+              <p>Our group photo receiving our trophy with the event organizer Joseph Chin at MITEC ignite stage.</p>
+            </div>
+          </div>
+          <div class="g-item">
+            <img src="gallery/2.jpg" alt="Gallery image 2" />
+            <div class="g-description">
+              <h4>Program Akar by PayNet and Microsoft</h4>
+              <p>Went to PayNet HQ for attending a VDEP session and an ideathon.</p>
+            </div>
+          </div>
+          <div class="g-item">
+            <img src="gallery/3.jpg" alt="Gallery image 3" />
+            <div class="g-description">
+              <h4>Ideathon Session</h4>
+              <p>Me preparing powerpoint slides with my team during PayNet's VDEP ideathon.</p>
+            </div>
+          </div>
+          <div class="g-item">
+            <img src="gallery/4.jpg" alt="Gallery image 4" />
+            <div class="g-description">
+              <h4>Me at Texchem Life Sciences (TLS)</h4>
+              <p>Me travelling to TLS at Bandar Baru Bangi to provide IT support.</p>
+            </div>
+          </div>
+          <div class="g-item">
+            <img src="gallery/5.jpg" alt="Gallery image 5" />
+            <div class="g-description">
+              <h4>I have no idea</h4>
+              <p>Me grabbing the AAIMS25 Buildathon winner trophy.</p>
+            </div>
+          </div>
+          <div class="g-item">
+            <img src="gallery/6.jpg" alt="Gallery image 6" />
+            <div class="g-description">
+              <h4>Kaspersky{CTF} Certificate of Participation</h4>
+              <p>Joined solo, managed to get 22nd place (out of 700+ teams) in the Asia/Oceania region.</p>
+            </div>
+          </div>
+          <div class="g-dots" aria-hidden="false"></div>
         </div>
         <button class="g-btn g-next" aria-label="Next image">›</button>
-        <div class="g-dots" aria-hidden="false"></div>
       </div>
     </div>
   </section>
@@ -341,14 +378,14 @@
                 
                 <!-- Mobile Live View Alternative -->
                 <div class="mobile-live-view">
-                  <div class="preview-icon">📱</div>
-                  <h4>AR Medical Visualization</h4>
-                  <p>Interactive mobile app preview</p>
-                  <a href="project_images/project1/1.jpg" target="_blank" class="mobile-live-btn">
+                  <div class="preview-icon">🫀</div>
+                  <h4>AR Medical Learning</h4>
+                  <p>3D anatomy visualization app</p>
+                  <a href="app/CompMed AR.apk" class="mobile-live-btn" download>
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                      <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
+                      <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                     </svg>
-                    View Gallery
+                    Download App
                   </a>
                 </div>
               </div>
