--- a/index.html
+++ b/index.html
@@ -336,12 +336,11 @@
                 <p class="project-subtitle">AR-Powered Medical Learning</p>
                 <p class="project-description">
                   Revolutionary AR application that brings human anatomy to life in 3D. 
-                  Built for medical students to visualize and interact with REAL anatomical models 
+                  Built for medical students to visualize and interact with <strong>REAL</strong> anatomical models 
                   through augmented reality technology.
                 </p>
                 <div class="project-tech">
-                  <span class="tech-tag">Unity AR</span>
-                  <span class="tech-tag">C#</span>
+                  <span class="tech-tag">Kiri Engine</span>
                   <span class="tech-tag">3D Modeling</span>
                   <span class="tech-tag">Mobile</span>
                 </div>
@@ -363,9 +362,12 @@
                     <div class="mobile-notch"></div>
                     <div class="mobile-content">
                       <div class="ar-scene">
-                        <img src="project_images/project1/1.jpg" alt="CompMed AR Interface" class="ar-image active">
-                        <img src="project_images/project1/2.jpg" alt="AR Anatomy Model" class="ar-image">
-                        <img src="project_images/project1/3.jpg" alt="3D Interaction" class="ar-image">
+                        <div class="ar-preview">
+                          <div class="ar-heart">🫀</div>
+                          <div class="ar-brain">🧠</div>
+                          <div class="ar-bone">🦴</div>
+                          <div class="ar-text">AR Medical Learning</div>
+                        </div>
                       </div>
                     </div>
                   </div>
