--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
               <span class="muted">Azure AI Fundamentals</span>
             </a>
 
-            <a class="cert-card" data-title="AZ-900" aria-disabled="true" href="#">
+            <a class="cert-card" data-title="AZ-900" aria-disabled="true" href="https://learn.microsoft.com/api/credentials/share/en-us/terryong/23F50DE3A44E2CFA?sharingId=534F1CCAD4F7A268">
               <img src="cert_badges/ms_fundamentals.svg" alt="AZ-900 badge">
               <p>AZ-900</p>
               <span class="muted">Azure Fundamentals</span>
