--- a/index.html
+++ b/index.html
@@ -112,12 +112,6 @@
             </svg>
             Download Resume
           </a>
-          <a class="btn btn-ghost hero-cta-secondary" href="#projects">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-            </svg>
-            View Projects
-          </a>
         </div>
       </div>
       <div class="hero-visual">
@@ -362,12 +356,9 @@
                     <div class="mobile-notch"></div>
                     <div class="mobile-content">
                       <div class="ar-scene">
-                        <div class="ar-preview">
-                          <div class="ar-heart">🫀</div>
-                          <div class="ar-brain">🧠</div>
-                          <div class="ar-bone">🦴</div>
-                          <div class="ar-text">AR Medical Learning</div>
-                        </div>
+                        <img src="project_images/project1/1.jpg" alt="CompMed AR Interface" class="ar-image active">
+                        <img src="project_images/project1/2.jpg" alt="AR Anatomy Model" class="ar-image">
+                        <img src="project_images/project1/3.jpg" alt="3D Interaction" class="ar-image">
                       </div>
                     </div>
                   </div>
