--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         </div>
 
   <div class="t-item">
-          <h3 style="margin-bottom:1%;">Great AI Hackathon</h3> 
+          <h3 style="margin-bottom:1%;">Great Malaysia AI Hackathon</h3> 
           <div style="gap:1rem; display:flex; align-items:baseline; justify-content:space-between;">
             <p><span class="muted">AWS, Asia Pacific University</span><p><span class="muted" style="text-align:right;">Sep 2025</span></p>
           </div>
@@ -367,19 +367,6 @@
                     <div class="float-icon">🧠</div>
                     <div class="float-icon">🦴</div>
                   </div>
-                </div>
-                
-                <!-- Mobile Live View Alternative -->
-                <div class="mobile-live-view">
-                  <div class="preview-icon">🫀</div>
-                  <h4>AR Medical Learning</h4>
-                  <p>3D anatomy visualization app</p>
-                  <a href="app/CompMed AR.apk" class="mobile-live-btn" download>
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                      <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
-                    </svg>
-                    Download App
-                  </a>
                 </div>
               </div>
             </div>
