--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                   <span class="tech-tag">Mobile</span>
                 </div>
                 <div class="project-actions">
-                  <a href="app/CompMed AR.apk" class="btn-primary" download>
+                  <a href="https://drive.usercontent.google.com/download?id=1uxsyIxVVA_NhgthSG6qrzmig3EJ9MKU0&export=download&authuser=1&confirm=t&uuid=e48904cd-ece9-4943-92c4-48686a5a31e1&at=AN8xHopDrAPh6y54wtMuxxSDSf3b:1757402488631" class="btn-primary" download>
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                       <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z"/>
                     </svg>
